tests/react_no_jsx_intrinsics/react_no_jsx_intrinsics.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot resolve name `ExactReactElement_DEPRECATED`. [cannot-resolve-name]

   3| <div />;
      ^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot resolve name `React$Key`. [cannot-resolve-name]

   3| <div />;
      ^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot resolve name `$JSXIntrinsics`. [cannot-resolve-name]

   3| <div />;
       ^^^



Found 3 errors
